--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,10 +23,9 @@ services:
       - app_network
     volumes:
       - ./backend:/app
-      - ./backend/.env:/app/.env
 
   postgres:
-    image: postgres:15
+    image: postgres:latest
     container_name: postgres_container
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
@@ -59,7 +58,7 @@ services:
       - app_network
 
   redis:
-    image: redis:6
+    image: redis:latest
     ports:
       - "6379:6379"
     healthcheck:
@@ -67,6 +66,8 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - app_network
 
   redis-commander:
     image: rediscommander/redis-commander:latest
@@ -77,23 +78,26 @@ services:
     depends_on:
       redis:
         condition: service_healthy
+    networks:
+      - app_network
 
   kafka:
-    image: bitnami/kafka:3.5.1
+    image: confluentinc/cp-kafka:latest
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_CFG_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092
-      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      ALLOW_PLAINTEXT_LISTENER: yes
-      KAFKA_ENABLE_KRAFT: no
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:19092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
     ports:
       - "9092:9092"
     depends_on:
       zookeeper:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "kafka-topics.sh --bootstrap-server localhost:9092 --list || exit 1"]
+      test: ["CMD-SHELL", "kafka-topics --bootstrap-server localhost:9092 --list"]
       interval: 20s
       timeout: 10s
       retries: 5
@@ -128,4 +132,3 @@ volumes:
 networks:
   app_network:
     driver: bridge
-
